@@ -3772,6 +3772,17 @@ On Windows file properties include next flags (upper case means flag is on):
  Z \- sparse file
 .RE
 .TP
+.BI 'suggestoptions'
+type: set
+.br
+default:
+.br
+Controls when key suggestions are displayed.  The following values are
+available:
+ - normal - in normal mode;
+ - visual - in visual mode;
+ - view   - in view mode.
+.TP
 .BI 'syscalls'
 type: boolean
 .br
