@@ -1,6 +1,6 @@
 " vifm syntax file
 " Maintainer:  xaizek <xaizek@openmailbox.org>
-" Last Change: February 26, 2016
+" Last Change: March 10, 2016
 " Based On:    Vim syntax file by Dr. Charles E. Campbell, Jr.
 
 if exists('b:current_syntax')
@@ -121,9 +121,10 @@ syntax keyword vifmOption contained aproposprg autochpos cdpath cd chaselinks
 		\ laststatus lines locateprg ls lsview mintimeoutlen number nu numberwidth
 		\ nuw relativenumber rnu rulerformat ruf runexec scrollbind scb scrolloff so
 		\ sort sortgroups sortorder sortnumbers shell sh shortmess shm slowfs
-		\ smartcase scs statusline stl syscalls tabstop timefmt timeoutlen title tm
-		\ trash trashdir ts tuioptions to undolevels ul vicmd viewcolumns vifminfo
-		\ vimhelp vixcmd wildmenu wmnu wildstyle wordchars wrap wrapscan ws
+		\ smartcase scs statusline stl suggestoptions syscalls tabstop timefmt
+		\ timeoutlen title tm trash trashdir ts tuioptions to undolevels ul vicmd
+		\ viewcolumns vifminfo vimhelp vixcmd wildmenu wmnu wildstyle wordchars wrap
+		\ wrapscan ws
 
 " Disabled boolean options
 syntax keyword vifmOption contained noautochpos noconfirm nocf nochaselinks
